Updates SDK
